--- a/style.css
+++ b/style.css
@@ -1,3 +1,85 @@
-.card{
-    height: 350px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.div1 {
+    background-color: rgb(35, 133, 204);
+}
+
+.div {
+    margin-left: 5%;
+}
+
+h1 {
+    margin-bottom: 5%;
+}
+
+ul {
+    list-style: none;
+}
+
+.create {
+    width: 85%;
+    margin-top: 5%;
+    background-color: rgb(35, 133, 204);
+    border: none;
+    border-top: 1px solid white;
+
+}
+.edit {
+    width: 85%;
+    margin-top: 5%;
+    background-color: rgb(35, 133, 204);
+    border: none;
+    border-top: 1px solid white;
+
+}
+.suppliers {
+    width: 85%;
+    margin-top: 35%;
+    background-color: rgb(35, 133, 204);
+    border: none;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+.inputStyle {
+    width: 70%;
+    height: 30px;
+    margin-bottom: 3%;
+}
+
+.indiv {
+    margin-top: 8%;
+}
+
+#submit {
+    width: 10%;
+    height: 40px;
+    background-color: rgb(35, 133, 204);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 0px 45px;
+    background-image: radial-gradient(93% 87% at 87% 89%, rgba(0, 0, 0, 0.23) 0%, transparent 86.18%), radial-gradient(66% 66% at 26% 20%, rgba(255, 255, 255, 0.55) 0%, rgba(255, 255, 255, 0) 69.79%, rgba(255, 255, 255, 0) 100%);
+    box-shadow: inset -3px -3px 9px rgba(255, 255, 255, 0.25), inset 0px 3px 9px rgba(255, 255, 255, 0.3), inset 0px 1px 1px rgba(255, 255, 255, 0.6), inset 0px -8px 36px rgba(0, 0, 0, 0.3), inset 0px 1px 5px rgba(255, 255, 255, 0.6), 2px 19px 31px rgba(0, 0, 0, 0.2);
+    border-radius: 14px;
+    font-weight: bold;
+    font-size: 16px;
+    border: 0;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.div2 {
+    height: 100vh;
 }
